tests/fixtures/invalid/pow_dict_none_bool.py
# Cannot call pow() with Dict[str, int], None, Bool
x = pow({"a": 1}, None, True)
